Initial HMTL and CSS Grid layout

--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
   <title>Card Game</title>
   <!-- type module will defer the script loading after html initial load -->
   <script src="script.js" type="module"></script>
+  <!-- link style sheet to index -->
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  
+  <div class="computer-deck deck">26</div>
+  <div class="computer-card-slot card-slot"></div>
+  <div class="text"></div>
+  <div class="player-deck deck">26</div>
+  <div class="player-card-slot card-slot"></div>
 </body>
 </html>
