--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Card Game</title>
-  <!-- type module will defer the script loading after html initial load -->
-  <script src="script.js" type="module"></script>
-  <!-- link style sheet to index -->
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <div class="computer-deck deck">26</div>
-  <div class="computer-card-slot card-slot"></div>
-  <div class="text"></div>
-  <div class="player-deck deck">26</div>
-  <div class="player-card-slot card-slot"></div>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Card Game</title>
+		<!-- type module will defer the script loading after html initial load -->
+		<script src="script.js" type="module"></script>
+		<!-- link style sheet to index -->
+		<link rel="stylesheet" href="styles.css" />
+	</head>
+	<body>
+		<div class="computer-deck deck">26</div>
+		<div class="computer-card-slot card-slot">
+			<div class="card red" data-value="9 ♥">♥</div>
+		</div>
+		<div class="text">sdfasdff</div>
+		<div class="player-deck deck">26</div>
+		<div class="player-card-slot card-slot">
+      <div class="card black" data-value="9 ♥">♥</div>
+    </div>
+	</body>
 </html>
