Dynamic rendering card in Javascript

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 	<body>
 		<div class="computer-deck deck">26</div>
 		<div class="computer-card-slot card-slot">
-			<div class="card red" data-value="9 ♥">♥</div>
+      <!-- script.js will access computer-card-slot div and create another div similar as below comment-->
+			<!-- <div class="card red" data-value="9 ♥">♥</div> -->
 		</div>
 		<div class="text">sdfasdff</div>
 		<div class="player-deck deck">26</div>
