--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
 		<link rel="stylesheet" href="styles.css" />
 	</head>
 	<body>
-		<div class="computer-deck deck">26</div>
+		<div class="computer-deck deck"></div>
 		<div class="computer-card-slot card-slot">
       <!-- script.js will access computer-card-slot div and create another div similar as below comment-->
 			<!-- <div class="card red" data-value="9 ♥">♥</div> -->
 		</div>
-		<div class="text">sdfasdff</div>
-		<div class="player-deck deck">26</div>
+		<div class="text"></div>
+		<div class="player-deck deck"></div>
 		<div class="player-card-slot card-slot">
-      <div class="card black" data-value="9 ♥">♥</div>
+      <!-- script.js will access player-card-slot div and create another div similar as below comment-->
+      <!-- <div class="card black" data-value="9 ♥">♥</div> -->
     </div>
 	</body>
 </html>
